objects/MUSW__Fee_Payment__c.object
<CustomObject>
    <description>Allocated Receipt amounts paying Fees</description>
    <fields>
        <fullName>AFRS_Cash_Code__c</fullName>
        <formula>MUSW__Fee__r.AFRS_Cash_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AFRS Cash Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFRS_Revenue_Code__c</fullName>
        <formula>MUSW__Fee__r.AFRS_Revenue_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AFRS Revenue Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AR_Date__c</fullName>
        <description>Captures Invoice Date</description>
        <formula>MUSW__Fee__r.BGBK__Invoice__r.BGBK__Invoice_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AR Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AR__c</fullName>
        <formula>IF( MUSW__Fee__r.ARed__c,&quot;ARed&quot; ,&quot;NoAR&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>TEXT(MUSW__Fee__r.Account__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounting_Status__c</fullName>
        <label>Accounting Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CC/ACH Distributed</fullName>
                </value>
                <value>
                    <fullName>Processed - Posted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activity__c</fullName>
        <formula>TEXT(MUSW__Fee__r.Activity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_Code__c</fullName>
        <formula>TEXT(MUSW__Receipt__r.Agency_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agency Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Method__c</fullName>
        <description>Captures application methos</description>
        <formula>TEXT( MUSW__Fee__r.MUSW__License2__r.Application_Method__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <description>Application type</description>
        <label>Program Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Appropriation__c</fullName>
        <formula>TEXT(MUSW__Fee__r.Appropriation__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Appropriation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBK__Cart__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Cart used to make this fee payment</description>
        <label>Cart</label>
        <referenceTo>BGBK__Cart__c</referenceTo>
        <relationshipLabel>Fee Payments</relationshipLabel>
        <relationshipName>Fee_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGBK__Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>BGBK__Bill__c</referenceTo>
        <relationshipLabel>Fee Payments</relationshipLabel>
        <relationshipName>Fee_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGBK__Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment</label>
        <referenceTo>BGBK__Payment__c</referenceTo>
        <relationshipLabel>Fee Payments</relationshipLabel>
        <relationshipName>Fee_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budget_Period__c</fullName>
        <formula>MUSW__Fee__r.Budget_Period__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <formula>TEXT(MUSW__Fee__r.Department__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External Id</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fee_AR_Code__c</fullName>
        <formula>MUSW__Fee__r.Acc_AR_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fee AR Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Cash_Code__c</fullName>
        <formula>MUSW__Fee__r.Acc_Cash_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fee Cash Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Type__c</fullName>
        <formula>Text(MUSW__Fee__r.MUSW__Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fee Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntakeMethod__c</fullName>
        <formula>IF( text(MUSW__Receipt__r.Intake_Method__c) = &quot;Counter&quot; , &quot;Counter - &quot;, &quot;NonCounter - &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IntakeMethod</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <description>Captures License type</description>
        <formula>TEXT( MUSW__Fee__r.MUSW__License2__r.Credential_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Fee_Amount__c</fullName>
        <description>System populated during payment processing - amount of the fee when fee is paid</description>
        <label>Fee Amount</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Fee_Current_Amount_Outstanding__c</fullName>
        <description>Current outstanding amount of the Fee.</description>
        <formula>MUSW__Fee__r.MUSW__Outstanding_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Outstanding amount of Fee as of now</inlineHelpText>
        <label>Fee Current Amount Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Fee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the associated fee record. The System populates this during payment processing.</description>
        <label>Fee</label>
        <referenceTo>MUSW__Fee__c</referenceTo>
        <relationshipLabel>Applied Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Paid_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The date when the payment was processed. The System populates this during payment processing.</description>
        <label>Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Payment_Amount__c</fullName>
        <description>The payment amount applied to the fee. The System populates this during payment processing.</description>
        <label>Payment Amount</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Receipt_Amount_Available__c</fullName>
        <description>Deprecated</description>
        <label>Receipt Amount Available</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Receipt_Amount_Tendered__c</fullName>
        <description>Total payment amount received during this payment transaction.</description>
        <label>Receipt Amount Tendered</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Receipt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the associated receipt record. The System populates this during payment processing.</description>
        <label>Receipt</label>
        <referenceTo>MUSW__Receipt__c</referenceTo>
        <relationshipLabel>Fees</relationshipLabel>
        <relationshipName>Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Paid_By__c</fullName>
        <formula>BGBK__Payment__r.CreatedBy.FirstName + &apos; &apos; + BGBK__Payment__r.CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Paid By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Source__c</fullName>
        <formula>BGBK__Payment__r.BGBK__Payment_Source__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <formula>TEXT(MUSW__Fee__r.Project__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receipt_Amount_Remaining__c</fullName>
        <formula>MUSW__Receipt__r.MUSW__Amount_Available__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Receipt - Amount Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Record_Number__c</fullName>
        <formula>MUSW__Fee__r.Related_To_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_To_License__c</fullName>
        <formula>IF( AND (
        NOT(ISBLANK(MUSW__Fee__r.MUSW__License2__c)) ,
        NOT(ISNULL(MUSW__Fee__r.MUSW__License2__c))
        ) ,
  MUSW__Fee__r.MUSW__License2__c , 
  &apos;&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related To License</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_to__c</fullName>
        <formula>MUSW__Fee__r.Related_To__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related to</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Code__c</fullName>
        <formula>MUSW__Fee__r.Revenue_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TMS_Cash_Code__c</fullName>
        <formula>MUSW__Fee__r.TMS_Cash_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TMS Cash Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TMS_Revenue_Code__c</fullName>
        <formula>MUSW__Fee__r.TMS_Revenue_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TMS Revenue Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>US_Bank_Payment_Status__c</fullName>
        <formula>Text(BGBK__Payment__r.BGBK__Receipt__r.US_Bank_Payment_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>US Bank Payment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voucher_Number__c</fullName>
        <formula>MUSW__Receipt__r.Voucher_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Voucher Number</label>
        <type>Text</type>
    </fields>
    <label>Fee Payment</label>
    <listViews>
        <fullName>License_Assignment_Queue_Fee_Payment</fullName>
        <filterScope>Queue</filterScope>
        <label>License Assignment Queue</label>
        <queue>License_Assignment_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fee Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>Create_Fee_Payment_By_Delegate__c</fullName>
        <label>Create Fee Payment By Delegate</label>
    </sharingReasons>
    <validationRules>
        <fullName>BGBK__Payment_greater_than_Fee_Amount</fullName>
        <active>true</active>
        <errorConditionFormula>MUSW__Payment_Amount__c &gt; MUSW__Fee_Amount__c</errorConditionFormula>
        <errorMessage>Applied Payment amount must be less than or equal to the Fee Amount</errorMessage>
    </validationRules>
</CustomObject>